# nrt-validate

./: .readthedocs.yaml  CHANGES.txt  MANIFEST.in  README.rst  _setup.py  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml
docs/: api_reference.rst  conf.py  estimators.rst  index.rst  quickstart.rst
docs/gallery/: README.rst  plot_bullock_reprex.py  plot_spatial_accuracy_estimators.py  plot_temporal_accuracy.py
nrt/validate/: __init__.py  algorithm_selection.py  composites.py  estimators.py  indices.py  interface.py  loaders.py  metrics.py  response.py  segments.py  utils.py  webmaps.py  xr_transforms.py
nrt/validate/notebooks/: demo_notebook.ipynb
sandbox/: nrt_inspect_module.ipynb  segment.ipynb
sandbox/.ipynb_checkpoints/: nrt_inspect_module-checkpoint.ipynb
