[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrt-validate"
version = "0.1.0"  # Replace with dynamic versioning if necessary
description = "Validation of alerting system results produced by tools like nrt"
readme = "README.rst"
authors = [
    {name = "Loic Dutrieux", email = "loic.dutrieux@ec.europa.eu"},
    {name = "Keith Arano"},
    {name = "Jonas Viehweger"}
]
keywords = ["sentinel2", "xarray", "validation", "forest", "monitoring", "change"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">= 3.9"
dependencies = ["xarray", "ipywidgets", "ipyleaflet", "bqplot",
                "ipyevents", "Pillow", "rioxarray", "netCDF4", "pandas"]

[project.urls]
homepage = "https://code.europa.eu/jrc-forest/nrt"

[project.optional-dependencies]
dask = ["dask"]
docs = ["sphinx", "sphinx_rtd_theme", "matplotlib", "sphinx-gallery"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nrt.validate"]
